<resources>
    <string name="app_name">Lugares</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Clave</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_correo">Correo</string>
    <string name="msg_imagen">Imagen del Lugar</string>
    <string name="msg_telefono">Telefono</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_addLugar">Agregar</string>
    <string name="msg_lugar_added">Lugar Agregado</string>
    <string name="msg_data">Faltan datos!</string>
</resources>